fixed navigation position on mobile menu open

--- a/packages/components/src/components/Navigation/index.module.scss
+++ b/packages/components/src/components/Navigation/index.module.scss
@@ -41,8 +41,8 @@ $navigation__animation__length: 0.6s;
 
 
     &:not(.closed) {
-      height: $navigation__mobile__height;
-      padding-top: 10px;
+      transform: translateY(-30px);
+      padding-top: 40px;
       padding-bottom: 10px;
     }
   }
@@ -119,7 +119,7 @@ $navigation__animation__length: 0.6s;
     opacity: 1;
     padding-top: calc(#{$navigation__desktop__height} - #{$navigation__mobile__height});
     position: fixed;
-    top: $navigation__mobile__height;
+    top: 100px;
     transition: opacity  #{$navigation__animation__length} cubic-bezier(0.5, 1, 0.89, 1);
     visibility: visible;
     width: 100vw;
